welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: type mismatch;
 found   : Unit
 required: String
	if ( vacation == true){
        ^