welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ( vacation == true){
	day match {
		case 0|6 => return "off"
		case 1|2|3|4|5 => return "10:00"
	}
}
}
